seaqt/QtGui/gen_qpageranges.h

class QPageRanges;
typedef QPageRanges::Range QPageRanges__Range;
class QPageRanges__Range;
typedef struct QPageRanges QPageRanges;
typedef struct QPageRanges__Range QPageRanges__Range;
QPageRanges* QPageRanges_new();
QPageRanges* QPageRanges_new2(QPageRanges* other);
void QPageRanges_operatorAssign(QPageRanges* self, QPageRanges* other);
void QPageRanges_swap(QPageRanges* self, QPageRanges* other);
void QPageRanges_addPage(QPageRanges* self, int pageNumber);
void QPageRanges_addRange(QPageRanges* self, int from, int to);
struct miqt_array /* of QPageRanges__Range* */  QPageRanges_toRangeList(const QPageRanges* self);
void QPageRanges_clear(QPageRanges* self);
struct miqt_string QPageRanges_toString(const QPageRanges* self);
QPageRanges* QPageRanges_fromString(struct miqt_string ranges);
bool QPageRanges_contains(const QPageRanges* self, int pageNumber);
bool QPageRanges_isEmpty(const QPageRanges* self);
int QPageRanges_firstPage(const QPageRanges* self);
int QPageRanges_lastPage(const QPageRanges* self);
void QPageRanges_detach(QPageRanges* self);
void QPageRanges_delete(QPageRanges* self);
QPageRanges__Range* QPageRanges__Range_new();
QPageRanges__Range* QPageRanges__Range_new2(QPageRanges__Range* param1);
bool QPageRanges__Range_contains(const QPageRanges__Range* self, int pageNumber);
void QPageRanges__Range_delete(QPageRanges__Range* self);